# zinder

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  buf.yaml  clippy.toml  deny.toml  docker-compose.observability.yml
.config/: nextest.toml
.github/workflows/: ci-pr.yml  live-tests.yml  protocol-contracts.yml
crates/zinder-client/: Cargo.toml
crates/zinder-client/src/: chain_index.rs  error.rs  lib.rs  local.rs  remote.rs
crates/zinder-client/tests/: acceptance.rs
crates/zinder-client/tests/integration/: capability_coverage.rs  local_chain_index.rs  mod.rs  remote_chain_index.rs
crates/zinder-core/: Cargo.toml
crates/zinder-core/src/: block_artifact.rs  block_id.rs  chain_epoch.rs  lib.rs  subtree_root.rs  transaction.rs  transparent_utxo.rs  tree_state.rs
crates/zinder-core/tests/integration/: chain_epoch.rs  mod.rs
crates/zinder-proto/: Cargo.toml  build.rs
crates/zinder-proto/proto/compat/lightwalletd/: COMMIT  UPSTREAM.md
crates/zinder-proto/proto/zinder/v1/ingest/: ingest.proto
crates/zinder-proto/proto/zinder/v1/wallet/: wallet.proto
crates/zinder-proto/src/: capabilities.rs  lib.rs
crates/zinder-proto/tests/integration/: lightwalletd_protocol.rs  mod.rs  wallet_protocol.rs
crates/zinder-runtime/: Cargo.toml
crates/zinder-runtime/src/: config.rs  lib.rs  metrics.rs  ops_endpoint.rs  readiness.rs
crates/zinder-runtime/tests/integration/: mod.rs  ops_endpoint.rs
crates/zinder-source/: Cargo.toml
crates/zinder-source/src/: chain_checkpoint.rs  lib.rs  node_auth.rs  node_capabilities.rs  node_source.rs  node_target.rs  source_block.rs  source_error.rs  source_subtree_root.rs  zebra_json_rpc.rs
crates/zinder-source/tests/: acceptance.rs
crates/zinder-source/tests/integration/: mod.rs  zebra_json_rpc.rs
crates/zinder-source/tests/live/: zebra_json_rpc.rs
crates/zinder-store/: Cargo.toml
crates/zinder-store/src/: artifact_visibility.rs  block_artifact.rs  chain_epoch.rs  chain_epoch_reader.rs  chain_event.rs  chain_event_stream.rs  chain_store.rs  grpc_status.rs  lib.rs  proto_codec.rs  store_error.rs  subtree_root.rs  transaction_artifact.rs  transparent_utxo.rs  tree_state.rs
crates/zinder-store/src/chain_store/: validation.rs
crates/zinder-store/src/format/: artifact_codec.rs  artifact_envelope.rs  mod.rs  store_key.rs  stream_cursor.rs
crates/zinder-store/src/kv/: mod.rs  rocksdb.rs
crates/zinder-store/tests/integration/: chain_epoch_reader.rs  chain_event.rs  commit_chain_epoch.rs  mod.rs  primary_secondary.rs  reorg_window.rs  subtree_root.rs
crates/zinder-testkit/: Cargo.toml
crates/zinder-testkit/src/: chain_fixture.rs  lib.rs  live.rs  mock_node_source.rs  mock_transaction_broadcaster.rs  store_fixture.rs
docs/: README.md  prd-0001-zinder-indexer.md
docs/adrs/: 0001-rocksdb-canonical-store.md  0002-boundary-specific-serialization.md  0003-canonical-storage-access-boundary.md  0004-node-source-and-protocol-boundaries.md  0005-chain-event-cursor-sequence.md  0006-test-tiers-and-live-config.md  0007-multi-process-storage-access.md  0008-consumer-neutral-wallet-data-plane.md
docs/architecture/: chain-events.md  chain-ingestion.md  derive-plane.md  extending-artifacts.md  node-source-boundary.md  protocol-boundary.md  public-interfaces.md  service-boundaries.md  service-operations.md  storage-backend.md  wallet-data-plane.md
docs/reference/: android-wallet-integration-findings.md  lessons-from-zaino.md  serving-zebra-and-zallet.md
docs/rfcs/: 0001-service-oriented-indexer-architecture.md
docs/specs/: m3-mempool.md
observability/: README.md
observability/grafana/dashboards/: zinder-overview.json
observability/grafana/provisioning/dashboards/: default.yml
observability/grafana/provisioning/datasources/: datasources.yml
observability/prometheus/: prometheus.yml
observability/prometheus/rules/: zinder-readiness.yml
scripts/: observability-regtest-smoke.sh  observability-smoke.sh
services/zinder-compat-lightwalletd/: Cargo.toml
services/zinder-compat-lightwalletd/src/: grpc.rs  lib.rs
services/zinder-compat-lightwalletd/tests/integration/: cli.rs  lightwalletd_grpc.rs  mod.rs  wallet_sdk_scan.rs
services/zinder-ingest/: Cargo.toml
services/zinder-ingest/src/: artifact_builder.rs  backfill.rs  chain_ingest.rs  config.rs  ingest_control.rs  lib.rs  main.rs  retention.rs  tip_follow.rs
services/zinder-ingest/src/cli/: mod.rs  parse.rs
services/zinder-ingest/tests/: acceptance.rs
services/zinder-ingest/tests/common/: mod.rs
services/zinder-ingest/tests/fixtures/: z3-regtest-block-1.json  zcash-testnet-orchard-block-1842462.json  zcash-testnet-sapling-block-1842432.json
services/zinder-ingest/tests/integration/: backfill.rs  cli.rs  fixture_block.rs  mod.rs  writer_status.rs
services/zinder-ingest/tests/live/: backfill.rs  cli.rs  deep_chain.rs  latency.rs  mod.rs  tip_follow.rs
services/zinder-query/: Cargo.toml
services/zinder-query/src/: lib.rs  readiness_refresh.rs
services/zinder-query/src/grpc/: adapter.rs  mod.rs  native.rs
services/zinder-query/tests/: acceptance.rs
services/zinder-query/tests/common/: mod.rs
services/zinder-query/tests/integration/: cli.rs  compact_block_range.rs  mod.rs  native_grpc.rs  query_epoch_consistency.rs  readiness_refresh.rs  single_artifact_lookup.rs  transaction_broadcast.rs
services/zinder-query/tests/perf/: mod.rs  perf_smoke.rs
