[package]
name = "zinder-runtime"
version = "0.1.0"
description = "Operational HTTP surface and shared configuration loader for Zinder service binaries"
edition.workspace = true
readme = "../../README.md"
keywords = ["zcash", "indexer", "operations"]
categories = ["network-programming"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
config.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread", "signal"] }
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
eyre.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }

[lints]
workspace = true
