[package]
name = "zinder-source"
version = "0.1.0"
description = "Zinder upstream node source domain values and adapters"
edition.workspace = true
readme = "../../README.md"
keywords = ["zcash", "indexer", "zebra"]
categories = ["api-bindings"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
hex.workspace = true
jsonrpsee.workspace = true
metrics.workspace = true
parking_lot.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
zebra-chain.workspace = true
zinder-core.workspace = true

[dev-dependencies]
eyre.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
zinder-testkit = { path = "../zinder-testkit" }

[lints]
workspace = true
