[package]
name = "zinder-store"
version = "0.1.0"
description = "Zinder canonical chain storage contracts and RocksDB adapter"
edition.workspace = true
readme = "../../README.md"
keywords = ["zcash", "indexer", "rocksdb"]
categories = ["database"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
getrandom = { version = "0.4.2", features = ["std"] }
hmac.workspace = true
metrics.workspace = true
parking_lot.workspace = true
prost.workspace = true
rust-rocksdb.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tonic.workspace = true
tonic-types.workspace = true
zinder-core.workspace = true
zinder-proto.workspace = true

[dev-dependencies]
eyre.workspace = true
tempfile.workspace = true

[lints]
workspace = true
