[package]
name = "zinder-ingest"
version = "0.1.0"
description = "Zinder ingestion runtime and artifact builders"
edition.workspace = true
readme = "../../README.md"
keywords = ["zcash", "indexer", "ingest"]
categories = ["command-line-utilities"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
hex.workspace = true
metrics.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
tonic = { workspace = true, features = ["server", "transport"] }
tracing.workspace = true
zebra-chain.workspace = true
zinder-core.workspace = true
zinder-proto.workspace = true
zinder-runtime.workspace = true
zinder-source.workspace = true
zinder-store.workspace = true

[lints]
workspace = true

[dev-dependencies]
async-trait.workspace = true
eyre.workspace = true
hex.workspace = true
prost.workspace = true
secrecy.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
zinder-compat-lightwalletd.workspace = true
zinder-query.workspace = true
zinder-testkit.workspace = true
